Fix spacing for posts by current user

--- a/app/assets/stylesheets/post_styles.scss
+++ b/app/assets/stylesheets/post_styles.scss
@@ -116,7 +116,7 @@
       display: flex;
       justify-content: flex-end;
       position: relative;
-      padding: 15px 20px 12px 20px;
+      padding: 0px 20px 12px 20px;
     }
 
     .dropdown {
